21-04-2004 Qball <Qball@qballcow.nl>
	* Added server settings to the preferences menu
	* added crossfading to the server settings in the preferences menu
	* Fixed anoying bug that caused the PM button to be inactive when the
disconnect button is clicked (with auto-connect enabled).
	* Changed the filter section to a more section 
	* Added a show information and a clear button to the playlist view in
the more section
	* ctrl-l in playlist window now grabs focus.
	* alt-r on main windows shows preferences (key mnemonic)

20-04-2004 Qball <Qball@qballcow.nl>
	* Added misc.[c|h]
	* Added hiding to tray icon and indication of hidden state in tray
	icon
	* Code cleanups
	* Removing of extention when filename used as song title.
	* lots more I forgot to changelog

12-04-2004 Qball <Qball@qballcow.nl>
    	*  Small updates.

13-03-2004 QBall <Qball@qballcow.nl>
    	* Fixed bug #202 (timeout for popup configurable
    	* If you press del in the playlist window it wil remove the current selected songs.
    *	Playlists view hide state is remembered over session.
    *	Time format is remembered over session.
    *	Fix bug #203. (crash when not connected and click on title bar)
    
06-03-2004 Qball <Qball@qballcow.nl>
    *	Added support for password authentification with mpd.
    *	Fixed highlighting bug in playlist.
    *	Password is saved (plain text) in mpd.
    *	Added popup-box when there are insufficient permissions to let gmpc be userfull. (less then read).

25-02-2004 qball <Qball@qballcow.nl>
    *	Lots of changes I forgot to changelog
    *	Added popup support. made this configurable via entry in the
    preferences menu. 
    *	src/tray-icon.c:	right click on tray icon shows menu. left
    click brings player window to front.
    *	src/config.c:		Added saving and loading for popup settings
    * 	src/main.h:		Added popup struct and idented the file.

18-01-2004 Qball <Qball@qballcow.nl>
    *	Lot of changes in the whole program. (also old ones)